--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,12 +22,15 @@
         </activity>
 
         <service
-            android:name=".data.services.MessagingService"
+            android:name="com.fabirt.kpopify.core.services.MessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <receiver android:name=".core.receivers.ReplyReceiver" />
+        <receiver android:name=".core.receivers.DummyReceiver" />
 
     </application>
 
