--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,11 @@
 buildscript {
     ext {
         kotlin_version = "1.3.72"
+        nav_version = "2.3.0"
         hilt_version = "2.28-alpha"
         hilt_jetpack_version = "1.0.0-alpha02"
+        coroutines_version = "1.3.9"
+        glide_version = "4.11.0"
     }
 
     repositories {
@@ -16,6 +19,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath 'com.google.gms:google-services:4.3.4'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
