--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
 
     // Glide image loading
     implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    // ExoPlayer
+    implementation "com.google.android.exoplayer:exoplayer:$exo_player_version"
 }
