--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         hilt_jetpack_version = "1.0.0-alpha02"
         coroutines_version = "1.3.9"
         glide_version = "4.11.0"
+        exo_player_version = "2.11.8"
     }
 
     repositories {
